# internal/application/handler/auth.go
@@ -37,63 +37,6 @@ func (ah *authHandler) SendOTP(ctx *fiber.Ctx) error {
 	return ctx.Status(response.Code).JSON(response)
 }
 
-// @Summary Login By OTP
-// @Description Login By OTP Code
-// @Tags Auth
-// @Accept json
-// @Produce json
-// @Param fields body auth.FieldVerifyOTP true "Fields"
-// @Success 200 {array} auth.ResponseJWT
-// @Failure 401 {object} shared.ResponseOneMessage
-// @Router /auth/otp-login [post]
-func (ah *authHandler) LoginByOTP(ctx *fiber.Ctx) error {
-	var fields auth.FieldVerifyOTP
-	ctx.BodyParser(&fields)
-	response, err := ah.authService.LoginByOTP(fields)
-	if err != nil {
-		return ctx.Status(err.Code).JSON(err)
-	}
-	return ctx.JSON(response)
-}
-
-// @Summary Login By Email
-// @Description Login with Email & Password
-// @Tags Auth
-// @Accept json
-// @Produce json
-// @Param fields body auth.FieldEmailLogin true "Fields"
-// @Success 200 {array} auth.ResponseJWT
-// @Failure 401 {object} shared.ResponseOneMessage
-// @Router /auth/email-login [post]
-func (ah *authHandler) LoginByEmail(ctx *fiber.Ctx) error {
-	var fields auth.FieldEmailLogin
-	ctx.BodyParser(&fields)
-	response, err := ah.authService.LoginByEmail(fields)
-	if err != nil {
-		return ctx.Status(err.Code).JSON(err)
-	}
-	return ctx.JSON(response)
-}
-
-// @Summary Login by Mobile
-// @Description Login with Mobile & Password
-// @Tags Auth
-// @Accept json
-// @Produce json
-// @Param fields body auth.FieldMobileLogin true "Fields"
-// @Success 200 {array} auth.ResponseJWT
-// @Failure 401 {object} shared.ResponseOneMessage
-// @Router /auth/mobile-login [post]
-func (ah *authHandler) LoginByMobile(ctx *fiber.Ctx) error {
-	var fields auth.FieldMobileLogin
-	ctx.BodyParser(&fields)
-	response, err := ah.authService.LoginByMobile(fields)
-	if err != nil {
-		return ctx.Status(err.Code).JSON(err)
-	}
-	return ctx.JSON(response)
-}
-
 // @Summary Refresh Token
 // @Description Refresh Token
 // @Tags Auth
@@ -126,6 +69,63 @@ func (ah *authHandler) RegisterByEmail(ctx *fiber.Ctx) error {
 	var fields auth.FieldEmailRegister
 	ctx.BodyParser(&fields)
 	response, err := ah.authService.RegisterByEmail(fields)
+	if err != nil {
+		return ctx.Status(err.Code).JSON(err)
+	}
+	return ctx.JSON(response)
+}
+
+// @Summary Login By OTP
+// @Description Login By OTP Code
+// @Tags Auth
+// @Accept json
+// @Produce json
+// @Param fields body auth.FieldVerifyOTP true "Fields"
+// @Success 200 {array} auth.ResponseJWT
+// @Failure 401 {object} shared.ResponseOneMessage
+// @Router /auth/login/otp [post]
+func (ah *authHandler) LoginByOTP(ctx *fiber.Ctx) error {
+	var fields auth.FieldVerifyOTP
+	ctx.BodyParser(&fields)
+	response, err := ah.authService.LoginByOTP(fields)
+	if err != nil {
+		return ctx.Status(err.Code).JSON(err)
+	}
+	return ctx.JSON(response)
+}
+
+// @Summary Login By Email
+// @Description Login with Email & Password
+// @Tags Auth
+// @Accept json
+// @Produce json
+// @Param fields body auth.FieldEmailLogin true "Fields"
+// @Success 200 {array} auth.ResponseJWT
+// @Failure 401 {object} shared.ResponseOneMessage
+// @Router /auth/login/email [post]
+func (ah *authHandler) LoginByEmail(ctx *fiber.Ctx) error {
+	var fields auth.FieldEmailLogin
+	ctx.BodyParser(&fields)
+	response, err := ah.authService.LoginByEmail(fields)
+	if err != nil {
+		return ctx.Status(err.Code).JSON(err)
+	}
+	return ctx.JSON(response)
+}
+
+// @Summary Login by Mobile
+// @Description Login with Mobile & Password
+// @Tags Auth
+// @Accept json
+// @Produce json
+// @Param fields body auth.FieldMobileLogin true "Fields"
+// @Success 200 {array} auth.ResponseJWT
+// @Failure 401 {object} shared.ResponseOneMessage
+// @Router /auth/login/mobile [post]
+func (ah *authHandler) LoginByMobile(ctx *fiber.Ctx) error {
+	var fields auth.FieldMobileLogin
+	ctx.BodyParser(&fields)
+	response, err := ah.authService.LoginByMobile(fields)
 	if err != nil {
 		return ctx.Status(err.Code).JSON(err)
 	}
